<resources>
    <string name="app_name">MediMind</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_medication_list">Your Medication List</string>
    <string name="name_place_holder">Name</string>
    
    <!-- splash screen strings -->
    <string name="splash_tagline">Your Medication Companion</string>
    <string name="save">Save</string>
    <string name="purpose">Medication Purpose</string>
    <string name="delete">Delete Medication</string>
    <string name="back">Back</string>
    <string name="for_fever_pain_may_cause_drowsiness">For fever/pain. May cause drowsiness</string>
    <string name="before_or_after_meal">Before or after meal</string>
    <string name="hint_2">2</string>
    <string name="medication_name_hint">Paracetamol</string>
    <string name="medication_name_label">Medication:</string>
    <string name="intake_quantity_label">Intake Quantity:</string>
    <string name="intake_quantity_label_with_unit">Intake Quantity: tablet(s) </string>
    <string name="tablets_label">/tablet(s)</string>
    <string name="frequency_label">Frequency:</string>
    <string name="frequency_label_with_unit">Frequency: time(s) /day </string>
    <string name="times_day_label">time(s) /day</string>
    <string name="instruction_label">Instruction:</string>
    <string name="note_label">Note:</string>
    <string name="time_h_label">Time(h):</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="image_details">Image Details</string>
    <string name="add_manually">Add Manually</string>
    <string name="close">Close</string>
    <string name="add_new_med">Add New Med</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string name="scheduled_for">Scheduled for:</string>
    <string name="no_active_medications_yet">No active medications yet</string>
    <string name="add_a_medication_to_see_it_here">Add a medication to see it here.</string>
    <string name="save_changes">Save Changes</string>
    <string name="email_username">Email (Username)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="new_password_optional">New Password (Optional)</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="no_medications_scheduled">No medications scheduled</string>
    <string name="monitor_your_medication_schedule">Monitor your medication schedule</string>
    <string name="click_on_add_new_medication_to_begin">Click on Add New Medication to begin!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="date">Date</string>
    <string name="medication">Medication</string>
    <string name="no_intake_history_yet">No intake history yet</string>
    <string name="your_medication_logs_will_appear_here_once_you_start_logging">Your medication logs will appear here once you start logging.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nric">NRIC</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="clinic">Clinic</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nric_e_g_s1234567a">NRIC E.g. S1234567A</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="select_clinic">Select clinic</string>
    <string name="register">Register</string>
    <string name="_time_">--:--</string>
    <string name="snooze_all">Snooze All</string>
    <string name="medication_dosage">Medication： dosage</string>
    <string name="instructions">Instructions: …</string>
    <string name="notes">Notes: …</string>

</resources>